--- a/index.html
+++ b/index.html
@@ -1,92 +1,57 @@
-# shakai
-社会学
 <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Progate</title>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
-</head>
-<body>
-  <header>
-    <div class="container">
-      <div class="header-left">
-        <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+<html lang="jp">
+  <head>
+    <meta charset="utf-8">
+    <title>解説！社会学</title>
+    <link rel="stylesheet" href="stylesheet.css">
+    </head>
+  <body>
+   <div class="header">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
+     <div class="header-logo">解説!<strong>社会学</strong></div>
+     <div class="header-list">
+       <ul>
+         <li>解説!<b>社会学</b></li>
+         <li><b>ブログ</b></li>
+         <li><b>社会学とは</b></li>
+       </ul>
+     </div>
+     <a class="twitter-timeline" data-width="231" data-height="210" href="https://twitter.com/SoCIoLoGYjp?ref_src=twsrc%5Etfw">Tweets by SoCIoLoGYjp</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+   </div>
+   <div class="main">
+     <div class="copy-container">
+       <h1>Sociology</h1>
+     </div>
+     <div class="contents">
+      <h3 class="section-title">contents</h3>
+      <div class="contents-item">
+        <img src="typewriter社会学-3224765_1280.jpg" width="322" height="250">
+        <p>解説!<b>社会学</b></p>
       </div>
-      <span class="fa fa-bars menu-icon"></span>
-      <div class="header-right">
-        <a href="#">レッスン</a>
-        <a href="#">新規登録</a>
-        <a href="#" class="login">ログイン</a>
+      <div class="contents-item">
+        <img src="medieval社会学-5437870_640.png" width="322" height="250">
+        <p><b>ブログ</b></p>
       </div>
+      <div class="contents-item">
+        <img src="wordcloud-679951_640.png" width="322" height="250">
+        <p><b>社会学とは</b></p>
+      </div>
+     </div>
     </div>
-  </header>
-  <div class="top-wrapper">
-    <div class="container">
-      <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
-      <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
-      <div class="btn-wrapper">
-        <a href="#" class="btn signup">新規登録はこちら</a>
-        <p>or</p>
-        <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebookで登録</a>
-        <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitterで登録</a>
-      </div>
-    </div>
-  </div>
-  <div class="lesson-wrapper">
-    <div class="container">
-      <div class="heading">
-        <h2>Learn Where to Get Started!</h2>
-      </div>
-      <div class="lessons">
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/html.png">
-            <p>HTML & CSS</p>
-          </div>
-          <p class="text-contents">ウェブページの作成に使用される言語です。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。</p>
+   <div class="footer">
+       <div class="footer-logo">解説!<b>社会学</b></div>
+        <div class="footer-list">
+          <ul>
+            <li>管理人について</li>
+            <li>どうでもいい話</li>
+            <li>割とまじめな話</li>
+          </ul>
         </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/jQuery.png">
-            <p>jQuery</p>
-          </div>
-          <p class="text-contents">素敵な動きを手軽に実装できるJavaScriptライブラリです。 アニメーション効果をつけたり、Ajax（エイジャックス）を使って外部ファイルを読み込んだりと色々なことができます。</p>
-        </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/ruby.png">
-            <p>Ruby</p>
-          </div>
-          <p class="text-contents">オープンソースの動的なプログラミング言語で、 シンプルさと高い生産性を備えています。大きなWebアプリケーションから小さな日用ツールまで、さまざまなソフトウェアを作ることができます。</p>
-        </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/php.png">
-            <p>PHP</p>
-          </div>
-          <p class="text-contents">HTMLだけではページの内容を変えることはできません。PHPはHTMLにプログラムを埋め込み、それを可能にします。</p>
+        <div class="contact">
+        <address>
+          お問い合わせは<a href="mailto:eoqiz36565@yahoo.co.jp"> mailto:eoqiz36565@yahoo.co.jp</a>まで
+        </address>
         </div>
       </div>
-      <div class="clear"></div>
-    </div>
-  </div>
-  <div class="message-wrapper">
-    <div class="container">
-      <div class="heading">
-        <h2>さぁ、あなたもProgateでプログラミングを学んでみませんか?</h2>
-        <h3>Let's learn to code, learn to be creative!</h3>
-      </div>
-      <span class="btn message">さっそく開発する</span>
-    </div>
-  </div>
-  <footer>
-    <div class="container">
-      <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
-      <p>Learn to Code, Learn to be Creative.</p>
-    </div>
-  </footer>
-</body>
+  </body>
 </html>
