--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>解説！社会学</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="icon" href="アイコン.png">
     </head>
   <body>
    <div class="header">
