--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   <body>
    <div class="header">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
-     <div class="header-logo">解説!<strong>社会学</strong></div>
+    <a href="https://shakaigaku.github.io/shakai/">
+      <div class="header-logo">解説!<strong>社会学</strong></div></a>
      <div class="header-list">
        <ul>
-         <li>解説!<b>社会学</b></li>
+         <li>解説!</li>
          <li><b>ブログ</b></li>
          <li><b>社会学とは</b></li>
        </ul>
@@ -27,7 +28,7 @@
       <h3 class="section-title">contents</h3>
       <div class="contents-item">
         <img src="typewriter社会学-3224765_1280.jpg" width="322" height="250">
-        <p>解説!<b>社会学</b></p>
+        <p>解説!</p>
       </div>
       <div class="contents-item">
         <img src="medieval社会学-5437870_640.png" width="322" height="250">
@@ -40,10 +41,11 @@
      </div>
     </div>
    <div class="footer">
-       <div class="footer-logo">解説!<b>社会学</b></div>
+     <a href="https://shakaigaku.github.io/shakai/">
+       <div class="footer-logo">解説!<b>社会学</b></div></a>
         <div class="footer-list">
           <ul>
-            <li>管理人について</li>
+            <a href="https://shakaigaku.github.io/author/"><li>管理人について</li></a>
             <li>どうでもいい話</li>
             <li>割とまじめな話</li>
           </ul>
