--- a/index.html
+++ b/index.html
@@ -1,4 +1,26 @@
-</div>
+<!DOCTYPE html>
+<html lang="jp">
+  <head>
+    <meta charset="utf-8">
+    <title>解説！社会学</title>
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="icon" href="icon.png">
+    </head>
+  <body>
+   <div class="header">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
+    <a href="https://shakaigaku.github.io/shakai/">
+      <div class="header-logo">解説!<strong>社会学</strong></div></a>
+     <div class="header-list">
+       <ul>
+        <a href="https://shakaigaku.github.io/kaisetu1/">
+        <li><b>解説!</b></li></a>
+         <li><b>ブログ</b></li>
+         <li><b>社会学とは</b></li>
+       </ul>
+     </div>
+     <a class="twitter-timeline" data-width="231" data-height="210" href="https://twitter.com/SoCIoLoGYjp?ref_src=twsrc%5Etfw">Tweets by SoCIoLoGYjp</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+   </div>
    <div class="main">
      <div class="copy-container">
        <h1>Sociology</h1>
