--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
        <ul>
         <a href="https://shakaigaku.github.io/kaisetu1/">
         <li><b>解説!</b></li></a>
-         <li><b>ブログ</b></li>
-         <li><b>社会学とは</b></li>
+        <a href="https://shakaigaku.github.io/blog1/">
+          <li><b>ブログ</b></li></a>
+         <a href="https://shakaigaku.github.io/WhatisSociology/">
+           <li><b>社会学とは</b></li></a>
        </ul>
      </div>
      <a class="twitter-timeline" data-width="231" data-height="210" href="https://twitter.com/SoCIoLoGYjp?ref_src=twsrc%5Etfw">Tweets by SoCIoLoGYjp</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -32,12 +34,14 @@
         <p><b>解説!</b></p></a>
       </div>
       <div class="contents-item">
+        <a href="https://shakaigaku.github.io/blog1/">
         <img src="medieval-5437870_640.png" width="322" height="250">
-        <p><b>ブログ</b></p>
+          <p><b>ブログ</b></p></a>
       </div>
       <div class="contents-item">
+        <a href="https://shakaigaku.github.io/WhatisSociology/">
         <img src="wordcloud-679951_640.png" width="322" height="250">
-        <p><b>社会学とは</b></p>
+          <p><b>社会学とは</b></p></a>
       </div>
      </div>
     </div>
@@ -47,8 +51,8 @@
         <div class="footer-list">
           <ul>
             <a href="https://shakaigaku.github.io/author/"><li>管理人について</li></a>
-            <li>どうでもいい話</li>
-            <li>割とまじめな話</li>
+            <a href="https://shakaigaku.github.io/TGIF/"><li>どうでもいい話</li></a>
+            <a href="https://shakaigaku.github.io/keener/"><li>割とまじめな話</li></a>
           </ul>
         </div>
         <div class="contact">
