--- a/index.html
+++ b/index.html
@@ -2,27 +2,26 @@
 <html lang="jp">
   <head>
     <meta charset="utf-8">
-    <title>解説！社会学</title>
+    <title>ソシオロ | 社会学を、わかりやすく</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="icon" href="icon.png">
-    </head>
+  </head>
   <body>
-   <div class="header">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
-    <a href="https://shakaigaku.github.io/shakai/">
-      <div class="header-logo">解説!<strong>社会学</strong></div></a>
-     <div class="header-list">
+   <header>
+   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
+      <div class="header-logo">
+        <a href="https://shakaigaku.github.io/Sociolo/"><img src="sociolo.png"></a>
+      </div>
+      <div class="header-list">
        <ul>
-        <a href="https://shakaigaku.github.io/kaisetu1/">
-        <li><b>解説!</b></li></a>
-        <a href="https://shakaigaku.github.io/blog1/">
-          <li><b>ブログ</b></li></a>
-         <a href="https://shakaigaku.github.io/WhatisSociology/">
-           <li><b>社会学とは</b></li></a>
+        <li><a href="https://shakaigaku.github.io/kaisetu1/"><b>解説!</b></a></li>
+        <li><b>サービス一覧</b></li>
+        <li><a href="https://shakaigaku.github.io/author/"><b>管理人について</b></a></li>
        </ul>
      </div>
-     <a class="twitter-timeline" data-width="231" data-height="210" href="https://twitter.com/SoCIoLoGYjp?ref_src=twsrc%5Etfw">Tweets by SoCIoLoGYjp</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-   </div>
+     <a class="twitter-timeline" data-width="231"
+     data-height="210" href="https://twitter.com/SoCIoLoGYjp?ref_src=twsrc%5Etfw">Tweets by SoCIoLoGYjp</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+   </header>
    <div class="main">
      <div class="copy-container">
        <h1>Sociology</h1>
@@ -30,36 +29,16 @@
      <div class="contents">
       <h3 class="section-title">contents</h3>
       <div class="contents-item">
-        <a href="https://shakaigaku.github.io/kaisetu1/"><img src="typewriter-3224765_1280.jpg" width="322" height="250">
+        <a href="https://shakaigaku.github.io/kaisetu1/">
+        <img src="typewriter-3224765_1280.jpg" width="322" height="250">
         <p><b>解説!</b></p></a>
       </div>
       <div class="contents-item">
         <a href="https://shakaigaku.github.io/blog1/">
-        <img src="medieval-5437870_640.png" width="322" height="250">
-          <p><b>ブログ</b></p></a>
-      </div>
-      <div class="contents-item">
-        <a href="https://shakaigaku.github.io/WhatisSociology/">
-        <img src="wordcloud-679951_640.png" width="322" height="250">
-          <p><b>社会学とは</b></p></a>
+        <img src="medieval.png" width="322" height="250">
+          <p><b>サービス一覧</b></p></a>
       </div>
      </div>
     </div>
-   <div class="footer">
-     <a href="https://shakaigaku.github.io/shakai/">
-       <div class="footer-logo">解説!<b>社会学</b></div></a>
-        <div class="footer-list">
-          <ul>
-            <a href="https://shakaigaku.github.io/author/"><li>管理人について</li></a>
-            <a href="https://shakaigaku.github.io/TGIF/"><li>どうでもいい話</li></a>
-            <a href="https://shakaigaku.github.io/keener/"><li>割とまじめな話</li></a>
-          </ul>
-        </div>
-        <div class="contact">
-        <address>
-          お問い合わせは<a href="mailto:eoqiz36565@yahoo.co.jp"> mailto:eoqiz36565@yahoo.co.jp</a>まで
-        </address>
-        </div>
-      </div>
   </body>
 </html>
