--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="header-list">
        <ul>
         <li><a href="https://shakaigaku.github.io/kaisetu1/"><b>解説!</b></a></li>
-        <li><b>サービス一覧</b></li>
+         <li><a href="https://shakaigaku.github.io/service/"><b>サービス一覧</b></a></li>
         <li><a href="https://shakaigaku.github.io/author/"><b>管理人について</b></a></li>
        </ul>
      </div>
@@ -34,7 +34,7 @@
         <p><b>解説!</b></p></a>
       </div>
       <div class="contents-item">
-        <a href="https://shakaigaku.github.io/blog1/">
+        <a href="https://shakaigaku.github.io/service/">
         <img src="medieval.png" width="322" height="250">
           <p><b>サービス一覧</b></p></a>
       </div>
