--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="jp">
-  <head>
+  <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/ fb# website: http://ogp.me/ns/ website#">
     <meta charset="utf-8">
     <title>ソシオロ | 社会学を、わかりやすく</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="icon" href="icon.png">
+    <meta name="description" content="「社会学を、わかりやすく」社会学を専攻する学生必携のメディア、ソシオロ。基礎基本から現代社会への応用まで、わかりやすく解説。">
+<meta property="og:url" content="https://shakaigaku.github.io/Sociolo/"/>
+<meta property="og:type" content="website" />
+<meta property="og:title" content="ソシオロ | 社会学を、わかりやすく" />
+<meta property="og:description" content="社会学を専攻する学生必携のメディア。基礎基本から現代社会への応用まで、わかりやすく解説。" />
+<meta property="og:site_name" content="ソシオロ"/>
+<meta property="og:image" content="sociolo.png" />  
   </head>
   <body>
    <header>
