--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta property="og:title" content="ソシオロ | 社会学を、わかりやすく" />
 <meta property="og:description" content="社会学を専攻する学生必携のメディア。基礎基本から現代社会への応用まで、わかりやすく解説。" />
 <meta property="og:site_name" content="ソシオロ"/>
-<meta property="og:image" content="sociolo.png" />  
+<meta property="og:image" content="alley.jpg"/>  
   </head>
   <body>
    <header>
