--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <h3 class="section-title">contents</h3>
       <div class="contents-item">
         <a href="https://shakaigaku.github.io/kaisetu1/">
-        <img src="typewriter-3224765_1280.jpg" width="322" height="250">
+        <img src="typewriter.jpg" width="322" height="250">
         <p><b>解説!</b></p></a>
       </div>
       <div class="contents-item">
