--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    <header>
    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
       <div class="header-logo">
-        <a href="https://shakaigaku.github.io/Sociolo/"><img src="sociolo.png"></a>
+        <a href="https://shakaigaku.github.io/Sociolo/"><img src="sociolo.png" alt"社会学系メディア　ソシオロ"></a>
       </div>
       <div class="header-list">
        <ul>
@@ -37,12 +37,12 @@
       <h3 class="section-title">contents</h3>
       <div class="contents-item">
         <a href="https://shakaigaku.github.io/kaisetu1/">
-        <img src="typewriter.jpg" width="322" height="250">
+        <img src="typewriter.jpg" width="322" height="250" alt="解説!を閲覧したい方はクリック。">
         <p><b>解説!</b></p></a>
       </div>
       <div class="contents-item">
         <a href="https://shakaigaku.github.io/service/">
-        <img src="medieval.png" width="322" height="250">
+        <img src="medieval.png" width="322" height="250" alt="サービス一覧はこちらをクリック。">
           <p><b>サービス一覧</b></p></a>
       </div>
      </div>
