--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <meta property="og:description" content="社会学を専攻する学生必携のメディア。基礎基本から現代社会への応用まで、わかりやすく解説。" />
 <meta property="og:site_name" content="ソシオロ"/>
 <meta property="og:image" content="alley.jpg"/>  
+    <meta name="google-site-verification" content="JE_rULFQX9nj76jbbZagV3P3PWtI80OSBfEwWPXTVdo" />
   </head>
   <body>
    <header>
