--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
       <div class="header-list">
        <ul>
-        <li><a href="https://shakaigaku.github.io/kaisetu1/"><b>解説!</b></a></li>
+        <li><a href="https://shakaigaku.github.io/kaisetu1/"><b>用語集</b></a></li>
          <li><a href="https://shakaigaku.github.io/service/"><b>サービス一覧</b></a></li>
         <li><a href="https://shakaigaku.github.io/author/"><b>管理人について</b></a></li>
        </ul>
@@ -38,8 +38,8 @@
       <h3 class="section-title">contents</h3>
       <div class="contents-item">
         <a href="https://shakaigaku.github.io/kaisetu1/">
-        <img src="typewriter.jpg" width="322" height="250" alt="解説!を閲覧したい方はクリック。">
-        <p><b>解説!</b></p></a>
+        <img src="typewriter.jpg" width="322" height="250" alt="用語集を閲覧したい方はクリック。">
+        <p><b>用語集</b></p></a>
       </div>
       <div class="contents-item">
         <a href="https://shakaigaku.github.io/service/">
