--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
      <div class="contents">
       <h3 class="section-title">contents</h3>
       <div class="contents-item">
-        <a href="https://shakaigaku.github.io/kaisetu1/">
+        <a href="https://shakaigaku.github.io/Yougo/">
         <img src="typewriter.jpg" width="322" height="250" alt="用語集を閲覧したい方はクリック。">
         <p><b>用語集</b></p></a>
       </div>
