--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <meta property="og:site_name" content="ソシオロ"/>
 <meta property="og:image" content="alley.jpg"/>  
     <meta name="google-site-verification" content="JE_rULFQX9nj76jbbZagV3P3PWtI80OSBfEwWPXTVdo" />
+    <script data-ad-client="ca-pub-3392722011094016" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
   <body>
    <header>
