--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    <header>
    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
       <div class="header-logo">
-        <a href="https://shakaigaku.github.io/Sociolo/"><img src="sociolo.png" alt"社会学系メディア　ソシオロ"></a>
+        <a href="https://shakaigaku.github.io/Sociolo/"><img src="sociolo.png" alt"社会学系メディア ソシオロ"></a>
       </div>
       <div class="header-list">
        <ul>
@@ -36,11 +36,17 @@
        <h1>Sociology</h1>
      </div>
      <div class="contents">
-      <h3 class="section-title">contents</h3>
+      <h2 class="section-title">contents</h2>
       <div class="contents-item">
         <a href="https://shakaigaku.github.io/Yougo/">
         <img src="typewriter.jpg" width="322" height="250" alt="用語集を閲覧したい方はクリック。">
         <p><b>用語集</b></p></a>
+      </div>
+      <div class="contents-item">
+        <a href="https://shakaigaku.github.io/Protein/">
+        <img src="01_m.jpg" width="322" height="250"
+        alt="社会学トレーニングを閲覧したい方はクリック。">
+      <p><b>社会学トレーニング</b></p></a>
       </div>
       <div class="contents-item">
         <a href="https://shakaigaku.github.io/service/">
